working on new site (done except for the content)

--- a/generator/menu.properties
+++ b/generator/menu.properties
@@ -4,7 +4,7 @@ items=Home,Projects,Downloads,Publications,Awards,Users,News,Contact
 
 Home.page=index.html
 
-Projects.items=Overview,Middleware,Communication_Libraries,Programming_Models
+Projects.items=Overview,Middleware,Communication_Libraries,Programming_Models,Applications
 Projects.Overview.page=projects.html
 
 Projects.Middleware.page=middleware.html
@@ -24,9 +24,22 @@ Projects.Programming_Models.MPJ.page=mpj.html
 Projects.Programming_Models.GMI.page=gmi.html
 Projects.Programming_Models.Ibis_RMI.page=rmi.html
 
+Projects.Applications.items=SAT4Satin
+Projects.Applications.page=applications.html
+Projects.Applications.SAT4Satin.page=sat4satin.html
+
 Downloads.page=downloads.html
-Publications.page=publications.html
+
+
+Publications.items=Papers,Talks,Tutorial
+Publications.Papers.page=papers.html
+Publications.Talks.page=talks.html
+Publications.Tutorial.page=tutorial.html
+
 Awards.page=awards.html
 Users.page=users.html
 News.page=news.html
-Contact.page=contact.html
+
+Contact.items=Contact,People
+Contact.Contact.page=contact.html
+Contact.People.page=people.html
