website just about done :)

--- a/generator/menu.properties
+++ b/generator/menu.properties
@@ -10,6 +10,10 @@ Projects.Overview.page=projects.html
 Projects.Middleware.page=middleware.html
 Projects.Middleware.items=JavaGAT,Zorilla
 Projects.Middleware.JavaGAT.page=javagat.html
+Projects.Middleware.JavaGAT.items=FAQ,Adaptors
+Projects.Middleware.JavaGAT.FAQ.page=javagat-faq.html
+Projects.Middleware.JavaGAT.Adaptors.page=javagat-adaptors.html
+
 Projects.Middleware.Zorilla.page=zorilla.html
 
 Projects.Communication_Libraries.page=commlibs.html
