comment for menu properties

--- a/menu.properties
+++ b/menu.properties
@@ -1,4 +1,10 @@
 #file containing a specification for the sub pages of the website.
+#a ".items" property creates a number of sub items for the specified item
+#a ".page" creates a page for the specified item
+#top level items can have either sub-items or a page (not both!)
+#non-top level items must have a page, and can optionally also have sub items
+#
+#Disclamer: not the most robust website generator ever :)
 
 items=Home,Projects,Downloads,Publications,Awards,Users,News,Contact
 
