Added pages for each submenu.

--- a/menu.properties
+++ b/menu.properties
@@ -23,9 +23,9 @@ Projects.Middleware.JavaGAT.Adaptors.page=javagat-adaptors.html
 Projects.Middleware.Zorilla.page=zorilla.html
 
 Projects.Communication_Libraries.page=commlibs.html
-Projects.Communication_Libraries.items=IPL,Smartsockets
+Projects.Communication_Libraries.items=IPL,SmartSockets
 Projects.Communication_Libraries.IPL.page=ipl.html
-Projects.Communication_Libraries.Smartsockets.page=smartsockets.html
+Projects.Communication_Libraries.SmartSockets.page=smartsockets.html
 
 Projects.Programming_Models.items=Satin,MPJ,GMI,Ibis_RMI
 Projects.Programming_Models.page=prog-models.html
