added a documentation section to the site

--- a/menu.properties
+++ b/menu.properties
@@ -6,12 +6,17 @@
 #
 #Disclamer: not the most robust website generator ever :)
 
-items=Home,Projects,Downloads,Publications,Awards,Users,News,Contact
+items=Home,Projects,Documentation,Downloads,Publications,Awards,Users,News,Contact
 
 Home.page=index.html
 
 Projects.items=Overview,Middleware,Communication_Libraries,Programming_Models,Applications
 Projects.Overview.page=projects.html
+
+Documentation.items=Overview,Tutorial,Javadoc
+Documentation.Overview.page=documentation.html
+Documentation.Tutorial.page=tutorial.html
+Documentation.Javadoc.page=javadoc.html
 
 Projects.Middleware.page=middleware.html
 Projects.Middleware.items=JavaGAT,Zorilla
@@ -40,11 +45,11 @@ Projects.Applications.SAT4Satin.page=sat4satin.html
 
 Downloads.page=downloads.html
 
-
-Publications.items=Papers,Talks,Tutorial
+#Publications.items=Papers,Talks,Tutorial
+Publications.items=Papers,Talks
 Publications.Papers.page=papers.html
 Publications.Talks.page=talks.html
-Publications.Tutorial.page=tutorial.html
+#Publications.Tutorial.page=tutorial.html
 
 Awards.page=awards.html
 Users.page=users.html
