added a "demos" section to the site

--- a/menu.properties
+++ b/menu.properties
@@ -6,7 +6,7 @@
 #
 #Disclamer: not the most robust website generator ever :)
 
-items=Home,Projects,Documentation,Downloads,Publications,Awards,Users,News,Contact
+items=Home,Projects,Documentation,Downloads,Publications,Demos,Awards,Users,News,Contact
 
 Home.page=index.html
 
@@ -51,6 +51,7 @@ Publications.Papers.page=papers.html
 Publications.Talks.page=talks.html
 #Publications.Tutorial.page=tutorial.html
 
+Demos.page=demos.html
 Awards.page=awards.html
 Users.page=users.html
 News.page=news.html
